Allow user to add a new list to their to do lists page.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,5 @@
 <h1>To do</h1>
 
-<form id="form_id" action="/list" method="get">
-  <button name="button">View all lists</button>
-</form>
+<a href="/list" class="btn btn-info" role="button">View all lists</a>
 
-<form id="form_id" action="/list_form" method="post">
-  <button name="button">Add a list</button>
-</form>
+<a href="/list_form" class="btn btn-info" role="button">Add a list</a>
