--- a/views/all_lists.erb
+++ b/views/all_lists.erb
@@ -5,7 +5,7 @@
 
   <ul>
     <% @lists.each() do |list| %>
-    <li><%= list.name() %></li>
+    <li><a href = "/list/<%=list.id()%>"><%= list.name() %></li>
     <% end %>
   </ul>
 
